--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "prod:hype:start": "pm2 start modules/hypescore/init.js --name=scraper_hype",
     "prod:hype:stop": "pm2 stop scraper_hype",
     "prod:hype:restart": "pm2 restart scraper_hype",
-    "prod:pin:start": "pm2 start modules/hypescore/pin.js --name=pinned_msg",
-    "prod:pin:stop": "pm2 stop modules/hypescore/pin.js --name=pinned_msg",
+    "prod:pin:start": "pm2 start modules/hypescore/pin.js --name=pinned_msgs",
+    "prod:pin:stop": "pm2 stop pinned_msgs",
+    "prod:pin:restart": "pm2 restart pinned_msgs",
     "prod:hype:delete": "pm2 delete scraper_hype",
     "dev:hype": "nodemon modules/hypescore/init.js",
     "prod:api:start": "pm2 start server.js --name=api",
